--- a/gallery.html
+++ b/gallery.html
@@ -157,6 +157,16 @@
                                 <span class="text-dark" style="width: 150px;">Agendas</span>
                             </a>
                         </li>
+                        <li class="nav-item">
+                            <a class="d-flex mx-3 py-2 border border-primary bg-light rounded-pill" data-bs-toggle="pill" href="#tab-6">
+                                <span class="text-dark" style="width: 150px;">Quita pelusas</span>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="d-flex mx-3 py-2 border border-primary bg-light rounded-pill" data-bs-toggle="pill" href="#tab-7">
+                                <span class="text-dark" style="width: 150px;">Juguete de baño</span>
+                            </a>
+                        </li>
                     </ul>
                     <div class="tab-content">
                         <div id="tab-2" class="tab-pane fade show p-0 active">
@@ -385,6 +395,207 @@
                                                 </div>
                                                 <div class="search-icon">
                                                     <a href="img/Fotos store/agenda-3.jpeg" data-lightbox="Gallery-24" class="my-auto"><i class="fas fa-search-plus btn-primary btn-primary-outline-0 rounded-circle p-3"></i></a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div id="tab-6" class="tab-pane fade show p-0">
+                            <div class="row g-4">
+                                <div class="col-lg-12">
+                                    <div class="row g-4">
+                                        <div class="col-lg-3">
+                                            <div class="gallery-img">
+                                                <img class="img-fluid rounded w-100" src="img/Fotos store/pelusa.jpeg" alt="">
+                                                <div class="gallery-overlay p-4">
+                                                    <h4 class="text-secondary"></h4>
+                                                </div>
+                                                <div class="search-icon">
+                                                    <a href="img/Fotos store/pelusa.jpeg" data-lightbox="Gallery-21" class="my-auto"><i class="fas fa-search-plus btn-primary btn-primary-outline-0 rounded-circle p-3"></i></a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-3">
+                                            <div class="gallery-img">
+                                                <img class="img-fluid rounded w-100" src="img/Fotos store/ pelusa-1.jpeg" alt="">
+                                                <div class="gallery-overlay p-4">
+                                                    <h4 class="text-secondary"></h4>
+                                                </div>
+                                                <div class="search-icon">
+                                                    <a href="img/Fotos store/ pelusa-1.jpeg" data-lightbox="Gallery-22" class="my-auto"><i class="fas fa-search-plus btn-primary btn-primary-outline-0 rounded-circle p-3"></i></a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-3">
+                                            <div class="gallery-img">
+                                                <img class="img-fluid rounded w-100" src="img/Fotos store/pelusa-2.jpeg" alt="">
+                                                <div class="gallery-overlay p-4">
+                                                    <h4 class="text-secondary"></h4>
+                                                </div>
+                                                <div class="search-icon">
+                                                    <a href="img/Fotos store/pelusa-2.jpeg" data-lightbox="Gallery-23" class="my-auto"><i class="fas fa-search-plus btn-primary btn-primary-outline-0 rounded-circle p-3"></i></a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-3">
+                                            <div class="gallery-img">
+                                                <img class="img-fluid rounded w-100" src="img/Fotos store/pelusa-3.jpeg" alt="">
+                                                <div class="gallery-overlay p-4">
+                                                    <h4 class="text-secondary"></h4>
+                                                </div>
+                                                <div class="search-icon">
+                                                    <a href="img/Fotos store/pelusa-3.jpeg" data-lightbox="Gallery-24" class="my-auto"><i class="fas fa-search-plus btn-primary btn-primary-outline-0 rounded-circle p-3"></i></a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-3">
+                                            <div class="gallery-img">
+                                                <img class="img-fluid rounded w-100" src="img/Fotos store/pelusa-4.jpeg" alt="">
+                                                <div class="gallery-overlay p-4">
+                                                    <h4 class="text-secondary"></h4>
+                                                </div>
+                                                <div class="search-icon">
+                                                    <a href="img/Fotos store/pelusa-4.jpeg" data-lightbox="Gallery-24" class="my-auto"><i class="fas fa-search-plus btn-primary btn-primary-outline-0 rounded-circle p-3"></i></a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-3">
+                                            <div class="gallery-img">
+                                                <img class="img-fluid rounded w-100" src="img/Fotos store/pelusa-5.jpeg" alt="">
+                                                <div class="gallery-overlay p-4">
+                                                    <h4 class="text-secondary"></h4>
+                                                </div>
+                                                <div class="search-icon">
+                                                    <a href="img/Fotos store/pelusa-5.jpeg" data-lightbox="Gallery-24" class="my-auto"><i class="fas fa-search-plus btn-primary btn-primary-outline-0 rounded-circle p-3"></i></a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div id="tab-7" class="tab-pane fade show p-0">
+                            <div class="row g-4">
+                                <div class="col-lg-12">
+                                    <div class="row g-4">
+                                        <div class="col-lg-3">
+                                            <div class="gallery-img">
+                                                <img class="img-fluid rounded w-100" src="img/Fotos store/juguete.jpeg" alt="">
+
+                                                <div class="search-icon">
+                                                    <a href="img/Fotos store/juguete.jpeg" data-lightbox="Gallery-13" class="my-auto"><i class="fas fa-search-plus btn-primary btn-primary-outline-0 rounded-circle p-3"></i></a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-3">
+                                            <div class="gallery-img">
+                                                <img class="img-fluid rounded w-100" src="img/Fotos store/juguete-1.jpeg" alt="">
+                                                <div class="gallery-overlay p-4">
+                                                    <h4 class="text-secondary"></h4>
+                                                </div>
+                                                <div class="search-icon">
+                                                    <a href="img/Fotos store/juguete-1.jpeg" data-lightbox="Gallery-14" class="my-auto"><i class="fas fa-search-plus btn-primary btn-primary-outline-0 rounded-circle p-3"></i></a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-3">
+                                            <div class="gallery-img">
+                                                <img class="img-fluid rounded w-100" src="img/Fotos store/juguete-2.jpeg" alt="">
+                                                <div class="gallery-overlay p-4">
+                                                    <h4 class="text-secondary"></h4>
+                                                </div>
+                                                <div class="search-icon">
+                                                    <a href="img/Fotos store/juguete-2.jpeg" data-lightbox="Gallery-15" class="my-auto"><i class="fas fa-search-plus btn-primary btn-primary-outline-0 rounded-circle p-3"></i></a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-3">
+                                            <div class="gallery-img">
+                                                <img class="img-fluid rounded w-100" src="img/Fotos store/juguete-3.jpeg" alt="">
+                                                <div class="gallery-overlay p-4">
+                                                    <h4 class="text-secondary"></h4>
+                                                </div>
+                                                <div class="search-icon">
+                                                    <a href="img/Fotos store/juguete-3.jpeg" data-lightbox="Gallery-16" class="my-auto"><i class="fas fa-search-plus btn-primary btn-primary-outline-0 rounded-circle p-3"></i></a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-3">
+                                            <div class="gallery-img">
+                                                <img class="img-fluid rounded w-100" src="img/Fotos store/juguete-4.jpeg" alt="">
+                                                <div class="gallery-overlay p-4">
+                                                    <h4 class="text-secondary"></h4>
+                                                </div>
+                                                <div class="search-icon">
+                                                    <a href="img/Fotos store/juguete-4.jpeg" data-lightbox="Gallery-26" class="my-auto"><i class="fas fa-search-plus btn-primary btn-primary-outline-0 rounded-circle p-3"></i></a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-3">
+                                            <div class="gallery-img">
+                                                <img class="img-fluid rounded w-100" src="img/Fotos store/juguete-5.jpeg" alt="">
+                                                <div class="gallery-overlay p-4">
+                                                    <h4 class="text-secondary"></h4>
+                                                </div>
+                                                <div class="search-icon">
+                                                    <a href="img/Fotos store/juguete-5.jpeg" data-lightbox="Gallery-26" class="my-auto"><i class="fas fa-search-plus btn-primary btn-primary-outline-0 rounded-circle p-3"></i></a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-3">
+                                            <div class="gallery-img">
+                                                <img class="img-fluid rounded w-100" src="img/Fotos store/juguete-7.jpeg" alt="">
+                                                <div class="gallery-overlay p-4">
+                                                    <h4 class="text-secondary"></h4>
+                                                </div>
+                                                <div class="search-icon">
+                                                    <a href="img/Fotos store/juguete-7.jpeg" data-lightbox="Gallery-26" class="my-auto"><i class="fas fa-search-plus btn-primary btn-primary-outline-0 rounded-circle p-3"></i></a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-3">
+                                            <div class="gallery-img">
+                                                <img class="img-fluid rounded w-100" src="img/Fotos store/juguete-8.jpeg" alt="">
+                                                <div class="gallery-overlay p-4">
+                                                    <h4 class="text-secondary"></h4>
+                                                </div>
+                                                <div class="search-icon">
+                                                    <a href="img/Fotos store/juguete-8.jpeg" data-lightbox="Gallery-26" class="my-auto"><i class="fas fa-search-plus btn-primary btn-primary-outline-0 rounded-circle p-3"></i></a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-3">
+                                            <div class="gallery-img">
+                                                <img class="img-fluid rounded w-100" src="img/Fotos store/juguete-9.jpeg" alt="">
+                                                <div class="gallery-overlay p-4">
+                                                    <h4 class="text-secondary"></h4>
+                                                </div>
+                                                <div class="search-icon">
+                                                    <a href="img/Fotos store/juguete-9.jpeg" data-lightbox="Gallery-26" class="my-auto"><i class="fas fa-search-plus btn-primary btn-primary-outline-0 rounded-circle p-3"></i></a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-3">
+                                            <div class="gallery-img">
+                                                <img class="img-fluid rounded w-100" src="img/Fotos store/juguete-10.jpeg" alt="">
+                                                <div class="gallery-overlay p-4">
+                                                    <h4 class="text-secondary"></h4>
+                                                </div>
+                                                <div class="search-icon">
+                                                    <a href="img/Fotos store/juguete-10.jpeg" data-lightbox="Gallery-26" class="my-auto"><i class="fas fa-search-plus btn-primary btn-primary-outline-0 rounded-circle p-3"></i></a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-3">
+                                            <div class="gallery-img">
+                                                <img class="img-fluid rounded w-100" src="img/Fotos store/juguete-11.jpeg" alt="">
+                                                <div class="gallery-overlay p-4">
+                                                    <h4 class="text-secondary"></h4>
+                                                </div>
+                                                <div class="search-icon">
+                                                    <a href="img/Fotos store/juguete-11.jpeg" data-lightbox="Gallery-26" class="my-auto"><i class="fas fa-search-plus btn-primary btn-primary-outline-0 rounded-circle p-3"></i></a>
                                                 </div>
                                             </div>
                                         </div>
