--- a/gallery.html
+++ b/gallery.html
@@ -151,6 +151,12 @@
                             <span class="text-dark" style="width: 150px;">Juguete de baño</span>
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="d-flex mx-3 py-2 border border-primary bg-light rounded-pill" data-bs-toggle="pill"
+                            href="#tab-8">
+                            <span class="text-dark" style="width: 150px;">Sombreros</span>
+                        </a>
+                    </li>
                 </ul>
                 <div class="tab-content">
                     <div id="tab-2" class="tab-pane fade show p-0 active">
@@ -161,7 +167,7 @@
                                         <div class="gallery-img">
                                             <img class="img-fluid rounded w-100" src="img/team-2.jpeg" alt="">
                                             <div class="search-icon">
-                                                <a href="img/gallery-9.jpg" data-lightbox="Gallery-9" class="my-auto"><i
+                                                <a href="img/team-2.jpeg" data-lightbox="Gallery-9" class="my-auto"><i
                                                         class="fas fa-search-plus btn-primary btn-primary-outline-0 rounded-circle p-3"></i></a>
                                             </div>
                                         </div>                                        
@@ -183,7 +189,7 @@
                                         <div class="gallery-img">
                                             <img class="img-fluid rounded w-100" src="img/termo-2.jpeg" alt="">
                                             <div class="search-icon">
-                                                <a href="img/gallery-10.jpg" data-lightbox="Gallery-10"
+                                                <a href="img/termo-2.jpeg" data-lightbox="Gallery-10"
                                                     class="my-auto"><i
                                                         class="fas fa-search-plus btn-primary btn-primary-outline-0 rounded-circle p-3"></i></a>
                                             </div>
@@ -1103,6 +1109,149 @@
                                             </div>
                                             <div class="search-icon">
                                                 <a href="img/Fotos store/juguete-11.jpeg" data-lightbox="Gallery-26"
+                                                    class="my-auto"><i
+                                                        class="fas fa-search-plus btn-primary btn-primary-outline-0 rounded-circle p-3"></i></a>
+                                            </div>
+                                        </div>
+                                        <div class="buy-icon py-4">
+                                            <a href="https://api.whatsapp.com/send?phone=573107800442">
+                                            <script src="https://cdn.lordicon.com/lordicon.js"></script>
+                                            <lord-icon
+                                                src="https://cdn.lordicon.com/eiekfffz.json"
+                                                trigger="loop"
+                                                delay="1000"
+                                                stroke="light"
+                                                colors="primary:#121331,secondary:#ebe6ef,tertiary:#4f3459"
+                                                style="width:50px;height:50px">
+                                            </lord-icon>
+                                        </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="tab-8" class="tab-pane fade show p-0">
+                        <div class="row g-4">
+                            <div class="col-lg-12">
+                                <div class="row g-4">
+                                    <div class="col-lg-3">
+                                        <div class="gallery-img">
+                                            <img class="img-fluid rounded w-100"
+                                                src="img/Fotos store/sombrero.jpeg" alt="">
+                                            <div class="gallery-overlay p-4">
+                                                <h4 class="text-secondary"></h4>
+                                            </div>
+                                            <div class="search-icon">
+                                                <a href="img/Fotos store/sombrero.jpeg" data-lightbox="Gallery-17"
+                                                    class="my-auto"><i
+                                                        class="fas fa-search-plus btn-primary btn-primary-outline-0 rounded-circle p-3"></i></a>
+                                            </div>
+                                        </div>
+                                        <div class="buy-icon py-4">
+                                            <a href="https://api.whatsapp.com/send?phone=573107800442">
+                                            <script src="https://cdn.lordicon.com/lordicon.js"></script>
+                                            <lord-icon
+                                                src="https://cdn.lordicon.com/eiekfffz.json"
+                                                trigger="loop"
+                                                delay="1000"
+                                                stroke="light"
+                                                colors="primary:#121331,secondary:#ebe6ef,tertiary:#4f3459"
+                                                style="width:50px;height:50px">
+                                            </lord-icon>
+                                        </a>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-3">
+                                        <div class="gallery-img">
+                                            <img class="img-fluid rounded w-100"
+                                                src="img/Fotos store/sombrero-1.jpeg" alt="">
+                                            <div class="gallery-overlay p-4">
+                                                <h4 class="text-secondary"></h4>
+                                            </div>
+                                            <div class="search-icon">
+                                                <a href="img/Fotos store/sombrero-1.jpeg" data-lightbox="Gallery-18"
+                                                    class="my-auto"><i
+                                                        class="fas fa-search-plus btn-primary btn-primary-outline-0 rounded-circle p-3"></i></a>
+                                            </div>
+                                        </div>
+                                        <div class="buy-icon py-4">
+                                            <a href="https://api.whatsapp.com/send?phone=573107800442">
+                                            <script src="https://cdn.lordicon.com/lordicon.js"></script>
+                                            <lord-icon
+                                                src="https://cdn.lordicon.com/eiekfffz.json"
+                                                trigger="loop"
+                                                delay="1000"
+                                                stroke="light"
+                                                colors="primary:#121331,secondary:#ebe6ef,tertiary:#4f3459"
+                                                style="width:50px;height:50px">
+                                            </lord-icon>
+                                        </a>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-3">
+                                        <div class="gallery-img">
+                                            <img class="img-fluid rounded w-100"
+                                                src="img/Fotos store/sombrero-2.jpeg" alt="">
+                                            <div class="gallery-overlay p-4">
+                                                <h4 class="text-secondary"></h4>
+                                            </div>
+                                            <div class="search-icon">
+                                                <a href="img/Fotos store/sombrero-2.jpeg" data-lightbox="Gallery-19"
+                                                    class="my-auto"><i
+                                                        class="fas fa-search-plus btn-primary btn-primary-outline-0 rounded-circle p-3"></i></a>
+                                            </div>
+                                        </div>
+                                        <div class="buy-icon py-4">
+                                            <a href="https://api.whatsapp.com/send?phone=573107800442">
+                                            <script src="https://cdn.lordicon.com/lordicon.js"></script>
+                                            <lord-icon
+                                                src="https://cdn.lordicon.com/eiekfffz.json"
+                                                trigger="loop"
+                                                delay="1000"
+                                                stroke="light"
+                                                colors="primary:#121331,secondary:#ebe6ef,tertiary:#4f3459"
+                                                style="width:50px;height:50px">
+                                            </lord-icon>
+                                        </a>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-3">
+                                        <div class="gallery-img">
+                                            <img class="img-fluid rounded w-100"
+                                                src="img/Fotos store/sombrero-3.jpeg" alt="">
+                                            <div class="gallery-overlay p-4">
+                                                <h4 class="text-secondary"></h4>
+                                            </div>
+                                            <div class="search-icon">
+                                                <a href="img/Fotos store/sombrero-3.jpeg" data-lightbox="Gallery-19"
+                                                    class="my-auto"><i
+                                                        class="fas fa-search-plus btn-primary btn-primary-outline-0 rounded-circle p-3"></i></a>
+                                            </div>
+                                        </div>
+                                        <div class="buy-icon py-4">
+                                            <a href="https://api.whatsapp.com/send?phone=573107800442">
+                                            <script src="https://cdn.lordicon.com/lordicon.js"></script>
+                                            <lord-icon
+                                                src="https://cdn.lordicon.com/eiekfffz.json"
+                                                trigger="loop"
+                                                delay="1000"
+                                                stroke="light"
+                                                colors="primary:#121331,secondary:#ebe6ef,tertiary:#4f3459"
+                                                style="width:50px;height:50px">
+                                            </lord-icon>
+                                        </a>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-3">
+                                        <div class="gallery-img">
+                                            <img class="img-fluid rounded w-100"
+                                                src="img/Fotos store/sombrero-4.jpeg" alt="">
+                                            <div class="gallery-overlay p-4">
+                                                <h4 class="text-secondary"></h4>
+                                            </div>
+                                            <div class="search-icon">
+                                                <a href="img/Fotos store/sombrero-4.jpeg" data-lightbox="Gallery-19"
                                                     class="my-auto"><i
                                                         class="fas fa-search-plus btn-primary btn-primary-outline-0 rounded-circle p-3"></i></a>
                                             </div>
