--- a/gallery.html
+++ b/gallery.html
@@ -122,10 +122,12 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="d-flex mx-3 py-2 border border-primary bg-light rounded-pill" data-bs-toggle="pill"
+                        <section id="maletas">
+                            <a class="d-flex mx-3 py-2 border border-primary bg-light rounded-pill" data-bs-toggle="pill"
                             href="#tab-3">
                             <span class="text-dark" style="width: 150px;">Maletas</span>
                         </a>
+                        </section>
                     </li>
                     <li class="nav-item">
                         <a class="d-flex mx-3 py-2 border border-primary bg-light rounded-pill" data-bs-toggle="pill"
@@ -155,6 +157,12 @@
                         <a class="d-flex mx-3 py-2 border border-primary bg-light rounded-pill" data-bs-toggle="pill"
                             href="#tab-8">
                             <span class="text-dark" style="width: 150px;">Sombreros</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="d-flex mx-3 py-2 border border-primary bg-light rounded-pill" data-bs-toggle="pill"
+                            href="#tab-8">
+                            <span class="text-dark" style="width: 150px;">Pasador de jean</span>
                         </a>
                     </li>
                 </ul>
@@ -1138,12 +1146,12 @@
                                     <div class="col-lg-3">
                                         <div class="gallery-img">
                                             <img class="img-fluid rounded w-100"
-                                                src="img/Fotos store/sombrero.jpeg" alt="">
+                                                src="img/Fotos store/boton-jean.jpeg"" alt="">
                                             <div class="gallery-overlay p-4">
                                                 <h4 class="text-secondary"></h4>
                                             </div>
                                             <div class="search-icon">
-                                                <a href="img/Fotos store/sombrero.jpeg" data-lightbox="Gallery-17"
+                                                <a href="img/Fotos store/boton-jean.jpeg" data-lightbox="Gallery-17"
                                                     class="my-auto"><i
                                                         class="fas fa-search-plus btn-primary btn-primary-outline-0 rounded-circle p-3"></i></a>
                                             </div>
@@ -1165,12 +1173,12 @@
                                     <div class="col-lg-3">
                                         <div class="gallery-img">
                                             <img class="img-fluid rounded w-100"
-                                                src="img/Fotos store/sombrero-1.jpeg" alt="">
+                                                src="img/Fotos store/boton-jean-1.jpeg"" alt="">
                                             <div class="gallery-overlay p-4">
                                                 <h4 class="text-secondary"></h4>
                                             </div>
                                             <div class="search-icon">
-                                                <a href="img/Fotos store/sombrero-1.jpeg" data-lightbox="Gallery-18"
+                                                <a href="img/Fotos store/boton-jean-1.jpeg" data-lightbox="Gallery-18"
                                                     class="my-auto"><i
                                                         class="fas fa-search-plus btn-primary btn-primary-outline-0 rounded-circle p-3"></i></a>
                                             </div>
@@ -1192,12 +1200,12 @@
                                     <div class="col-lg-3">
                                         <div class="gallery-img">
                                             <img class="img-fluid rounded w-100"
-                                                src="img/Fotos store/sombrero-2.jpeg" alt="">
+                                                src="img/Fotos store/boton-jean-2.jpeg" alt="">
                                             <div class="gallery-overlay p-4">
                                                 <h4 class="text-secondary"></h4>
                                             </div>
                                             <div class="search-icon">
-                                                <a href="img/Fotos store/sombrero-2.jpeg" data-lightbox="Gallery-19"
+                                                <a href="img/Fotos store/boton-jean-2.jpeg" data-lightbox="Gallery-19"
                                                     class="my-auto"><i
                                                         class="fas fa-search-plus btn-primary btn-primary-outline-0 rounded-circle p-3"></i></a>
                                             </div>
@@ -1216,42 +1224,16 @@
                                         </a>
                                         </div>
                                     </div>
+
                                     <div class="col-lg-3">
                                         <div class="gallery-img">
                                             <img class="img-fluid rounded w-100"
-                                                src="img/Fotos store/sombrero-3.jpeg" alt="">
+                                                src="img/Fotos store/boton-jean-3.jpeg" alt="">
                                             <div class="gallery-overlay p-4">
                                                 <h4 class="text-secondary"></h4>
                                             </div>
                                             <div class="search-icon">
-                                                <a href="img/Fotos store/sombrero-3.jpeg" data-lightbox="Gallery-19"
-                                                    class="my-auto"><i
-                                                        class="fas fa-search-plus btn-primary btn-primary-outline-0 rounded-circle p-3"></i></a>
-                                            </div>
-                                        </div>
-                                        <div class="buy-icon py-4">
-                                            <a href="https://api.whatsapp.com/send?phone=573107800442">
-                                            <script src="https://cdn.lordicon.com/lordicon.js"></script>
-                                            <lord-icon
-                                                src="https://cdn.lordicon.com/eiekfffz.json"
-                                                trigger="loop"
-                                                delay="1000"
-                                                stroke="light"
-                                                colors="primary:#121331,secondary:#ebe6ef,tertiary:#4f3459"
-                                                style="width:50px;height:50px">
-                                            </lord-icon>
-                                        </a>
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-3">
-                                        <div class="gallery-img">
-                                            <img class="img-fluid rounded w-100"
-                                                src="img/Fotos store/sombrero-4.jpeg" alt="">
-                                            <div class="gallery-overlay p-4">
-                                                <h4 class="text-secondary"></h4>
-                                            </div>
-                                            <div class="search-icon">
-                                                <a href="img/Fotos store/sombrero-4.jpeg" data-lightbox="Gallery-19"
+                                                <a href="img/Fotos store/boton-jean-3.jpeg" data-lightbox="Gallery-19"
                                                     class="my-auto"><i
                                                         class="fas fa-search-plus btn-primary btn-primary-outline-0 rounded-circle p-3"></i></a>
                                             </div>
