--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <div class="container-fluid team py-5">
                 <div class="container py-5">
                     <div class="text-center mx-auto mb-5 py-5" style="max-width: 800px;">
-                        <p class="fs-4 text-uppercase text-primary">Nuestro catalogo</p>
+                        <p class="fs-4 text-uppercase text-primary">Nuestro catálogo</p>
                         <!-- <h1 class="display-4 mb-4">Spa & Beauty Specialist</h1> -->
                     </div>
                     <div class="row g-4">
@@ -128,7 +128,7 @@
 
                                 </div>
                                 <div class="text-center p-4">
-                                    <a href="gallery.html"
+                                    <a href="gallery.html#tab-2"
                                         class="btn btn-primary btn-primary-outline-0 rounded-pill py-3 px-5">Ver más</a>
                                 </div>
 
@@ -275,7 +275,7 @@
                                         alt="">
                                 </div>
                                 <div class="team-text rounded-bottom text-center p-4">
-                                    <h3 class="text-white">Mini removedor</h3>
+                                    <h3 class="text-white">Quita pelusas</h3>
                                     <p class="mb-0 text-white">Elimina cualquier polvo</p>
                                 </div>
                                 <div class="text-center p-4">
@@ -302,6 +302,31 @@
                                 <div class="team-text rounded-bottom text-center p-4">
                                     <h3 class="text-white">Sombrero</h3>
                                     <p class="mb-0 text-white">Protección UV</p>
+                                </div>
+                                <div class="text-center p-4">
+                                    <a href="gallery.html"
+                                        class="btn btn-primary btn-primary-outline-0 rounded-pill py-3 px-5">Ver
+                                        más</a>
+                                </div>
+                                <div class="team-social">
+                                    <a class="btn btn-light btn-light-outline-0 btn-square rounded-circle mb-2"
+                                        href="https://www.facebook.com/profile.php?id=61556069211164&mibextid=LQQJ4d"><i
+                                            class="fab fa-facebook-f"></i></a>
+                                    <a class="btn btn-light btn-light-outline-0 btn-square rounded-circle"
+                                        href="https://www.instagram.com/jl_home__/?igsh=OGxkcXh3aDZsdXlw&utm_source=qr"><i
+                                            class="fab fa-instagram"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6 col-lg-6 col-xl-3">
+                            <div class="team-item">
+                                <div class="team-img rounded-top">
+                                    <img src="img/Fotos store/boton-jean.jpeg" class="img-fluid w-100 rounded-top bg-light"
+                                        alt="">
+                                </div>
+                                <div class="team-text rounded-bottom text-center p-4">
+                                    <h3 class="text-white">Pasador de jean</h3>
+                                    <p class="mb-0 text-white">Pasador de oso ajustable</p>
                                 </div>
                                 <div class="text-center p-4">
                                     <a href="gallery.html"
@@ -493,7 +518,7 @@
                                     <i class="fas fa-envelope fa-2x text-primary me-4"></i>
                                     <div>
                                         <h4>Correo</h4>
-                                        <p class="mb-0">JLHONE@GMAIL.COM</p>
+                                        <p class="mb-0">JLHOME@GMAIL.COM</p>
                                     </div>
                                 </div>
                             </div>
@@ -517,10 +542,12 @@
                         <div class=" text-center p-4 rounded-bottom bg-primary">
                             <h4 class="text-white fw-bold">Siguenos</h4>
                             <div class="d-flex align-items-center justify-content-center">
-                                <a href="#" class="btn btn-light btn-light-outline-0 btn-square rounded-circle me-3"><i
-                                        class="fab fa-facebook-f"></i></a>
-                                <a href="#" class="btn btn-light btn-light-outline-0 btn-square rounded-circle me-3"><i
-                                        class="fab fa-instagram"></i></a>
+                                <a href="https://www.facebook.com/profile.php?id=61556069211164&mibextid=LQQJ4d"
+                                class="me-3 btn-square border rounded-circle nav-fill"><i
+                                    class="fab fa-facebook-f"></i></a>
+                            <a href="https://www.instagram.com/jl_home__/?igsh=OGxkcXh3aDZsdXlw&utm_source=qr"
+                                class="me-3 btn-square border rounded-circle nav-fill"><i
+                                    class="fab fa-instagram"></i></a>
                             </div>
                         </div>
                     </div>
@@ -649,10 +676,12 @@
                 </div>
                 <div class="col-md-4">
                     <div class="d-flex justify-content-center">
-                        <a href="https://www.facebook.com/profile.php?id=61556069211164&mibextid=LQQJ4d" class="btn btn-light btn-light-outline-0 btn-sm-square rounded-circle me-2"><i
-                                class="fab fa-facebook-f"></i></a>
-                        <a href="https://www.instagram.com/jl_home__/?igsh=OGxkcXh3aDZsdXlw&utm_source=qr" class="btn btn-light btn-light-outline-0 btn-sm-square rounded-circle me-2"><i
-                                class="fab fa-instagram"></i></a>
+                        <a href="https://www.facebook.com/profile.php?id=61556069211164&mibextid=LQQJ4d"
+                        class="me-3 btn-square border rounded-circle nav-fill"><i
+                            class="fab fa-facebook-f"></i></a>
+                    <a href="https://www.instagram.com/jl_home__/?igsh=OGxkcXh3aDZsdXlw&utm_source=qr"
+                        class="me-3 btn-square border rounded-circle nav-fill"><i
+                            class="fab fa-instagram"></i></a>
                     </div>
                 </div>
                 <div class="col-md-4 text-center text-md-end text-white">
