--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
                                 </div>
                                 <div class="text-center p-4">
-                                    <a href="gallery.html#tab-2"
+                                    <a href="gallery.html"
                                         class="btn btn-primary btn-primary-outline-0 rounded-pill py-3 px-5">Ver más</a>
                                 </div>
 
