--- a/gallery.html
+++ b/gallery.html
@@ -291,50 +291,25 @@
                                         <div class="card">
                                             <div class="card-body">
                                                 <h1 class="h2">Termos</h1>
-                                                <p class="h3 py-2">$25.00</p>
+                                                <p class="h3 py-2">$25.000</p>
                                                 <p class="py-2">
                                                     <i class="fa fa-star text-warning"></i>
                                                     <i class="fa fa-star text-warning"></i>
                                                     <i class="fa fa-star text-warning"></i>
                                                     <i class="fa fa-star text-warning"></i>
-                                                    <i class="fa fa-star text-secondary"></i>
-                                                    <span class="list-inline-item text-dark">Rating 4.8 | 36
-                                                        Comments</span>
+                                                    <i class="fa fa-star text-warning"></i>                                                    
                                                 </p>
-                                                <ul class="list-inline">
-                                                    <li class="list-inline-item">
-                                                        <p class="text-muted"><strong>Easy Wear</strong></p>
-                                                    </li>
-                                                </ul>
 
-                                                <h6>Description:</h6>
-                                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                                                    eiusmod temp incididunt ut labore et dolore magna aliqua. Quis ipsum
-                                                    suspendisse. Donec condimentum elementum convallis. Nunc sed orci a
-                                                    diam ultrices aliquet interdum quis nulla.</p>
-                                                <ul class="list-inline">
-                                                    <li class="list-inline-item">
-                                                        <p class="text-muted"><strong>White / Black</strong></p>
-                                                    </li>
-                                                </ul>
-
-                                                <!-- <h6>Specification:</h6>
-                            <ul class="list-unstyled pb-3">
-                                <li>Lorem ipsum dolor sit</li>
-                                <li>Amet, consectetur</li>
-                                <li>Adipiscing elit,set</li>
-                                <li>Duis aute irure</li>
-                                <li>Ut enim ad minim</li>
-                                <li>Dolore magna aliqua</li>
-                                <li>Excepteur sint</li>
-                            </ul> -->
-
+                                                <h6>Descripción:</h6>
+                                                <p>¡Lleva contigo la frescura o calidez que necesitas con nuestros termos de última generación! 
+                                                    Perfectos para cualquier ocasión, mantienen tus bebidas frescas. ¡Compra ahora y disfruta de tus bebidas favoritas en cualquier lugar!.</p>
+                                             
                                                 <form action="" method="GET">
                                                     <input type="hidden" name="product-title" value="Activewear">
                                                     <div class="row pb-3">
                                                         <div class="col d-grid">
                                                             <a href="https://api.whatsapp.com/send?phone=573107800442"
-                                                                target="_blank" class="btn btn-success btn-sm"
+                                                                target="_blank" class="btn btn-success btn-lg"
                                                                 name="submit" value="buy">
                                                                 <script
                                                                     src="https://cdn.lordicon.com/lordicon.js"></script>
@@ -347,9 +322,7 @@
                                                             </a>
                                                         </div>
                                                     </div>
-
                                                 </form>
-
                                             </div>
                                         </div>
                                     </div>
