--- a/gallery.html
+++ b/gallery.html
@@ -106,8 +106,8 @@
 
 
     <!-- Gallery Start -->
-    <div class="container-fluid gallery py-5">
-        <div class="container py-5">
+    <div class="container-fluid gallery">
+        <div class="container">
             <!-- <div class="text-center mx-auto mb-5" style="max-width: 800px;">
                     <p class="fs-4 text-uppercase text-primary">Our Gallery</p>
                     <h1 class="display-4 mb-4">Let's See Our Gallery</h1>
