--- a/gallery.html
+++ b/gallery.html
@@ -106,7 +106,7 @@
 
 
     <!-- Gallery Start -->
-    <div class="container-fluid gallery">
+    <div class="container-fluid gallery py-4">
         <div class="container">
             <!-- <div class="text-center mx-auto mb-5" style="max-width: 800px;">
                     <p class="fs-4 text-uppercase text-primary">Our Gallery</p>
