--- a/gallery.html
+++ b/gallery.html
@@ -179,7 +179,7 @@
                                 <div class="row">
                                     <div class="col-lg-5 mt-5">
                                         <div class="card mb-3">
-                                            <img class="img-fluid rounded w-100" src="img/team-1.jpeg"
+                                            <img class="img-fluid rounded w-100" src="img/team-2.jpeg"
                                                 alt="Card image cap" id="product-detail">
                                         </div>
                                         <div class="row">
@@ -204,19 +204,19 @@
                                                             <div class="col-4">
                                                                 <a href="#">
                                                                     <img class="img-fluid rounded w-100"
-                                                                        src="img/team-2.jpeg" alt="Product Image 1">
+                                                                        src="img/termo-2.jpeg" alt="Product Image 1">
                                                                 </a>
                                                             </div>
                                                             <div class="col-4">
                                                                 <a href="#">
                                                                     <img class="img-fluid rounded w-100"
-                                                                        src="img/team-3.jpeg" alt="Product Image 2">
+                                                                        src="img/termo-3.jpg" alt="Product Image 2">
                                                                 </a>
                                                             </div>
                                                             <div class="col-4">
                                                                 <a href="#">
                                                                     <img class="img-fluid rounded w-100"
-                                                                        src="img/team-1.jpeg" alt="Product Image 3">
+                                                                        src="img/termo-4.jpg" alt="Product Image 3">
                                                                 </a>
                                                             </div>
                                                         </div>
@@ -229,10 +229,10 @@
                                                             <div class="col-4">
                                                                 <a href="#">
                                                                     <img class="img-fluid rounded w-100"
-                                                                        src="img/team-2.jpeg" alt="Product Image 4">
+                                                                        src="img/termo-5.jpg" alt="Product Image 4">
                                                                 </a>
                                                             </div>
-                                                            <div class="col-4">
+                                                            <!-- <div class="col-4">
                                                                 <a href="#">
                                                                     <img class="img-fluid rounded w-100"
                                                                         src="img/team-3.jpeg" alt="Product Image 5">
@@ -243,13 +243,13 @@
                                                                     <img class="img-fluid rounded w-100"
                                                                         src="img/team-4.jpeg" alt="Product Image 6">
                                                                 </a>
-                                                            </div>
+                                                            </div> -->
                                                         </div>
                                                     </div>
                                                     <!--/.Second slide-->
 
                                                     <!--Third slide-->
-                                                    <div class="carousel-item">
+                                                    <!-- <div class="carousel-item">
                                                         <div class="row">
                                                             <div class="col-4">
                                                                 <a href="#">
@@ -270,7 +270,7 @@
                                                                 </a>
                                                             </div>
                                                         </div>
-                                                    </div>
+                                                    </div> -->
                                                     <!--/.Third slide-->
                                                 </div>
                                                 <!--End Slides-->
@@ -291,7 +291,7 @@
                                         <div class="card">
                                             <div class="card-body">
                                                 <h1 class="h2">Termos</h1>
-                                                <p class="h3 py-2">$25.000</p>
+                                                <p class="h3 py-2">Desde $25.000</p>
                                                 <p class="py-2">
                                                     <i class="fa fa-star text-warning"></i>
                                                     <i class="fa fa-star text-warning"></i>
@@ -330,6 +330,7 @@
                             </div>
                         </section>
                     </div>
+                    <!-- -------------------------------------------------------------------------------------------------------- -->
                     <div id="tab-3" class="tab-pane fade show p-0">
                         <section class="bg-light">
                             <div class="container pb-5">
@@ -361,19 +362,19 @@
                                                             <div class="col-4">
                                                                 <a href="#">
                                                                     <img class="img-fluid rounded w-100"
-                                                                        src="img/team-2.jpeg" alt="Product Image 1">
+                                                                        src="img/Fotos store/maleta-1.jpeg" alt="Product Image 1">
                                                                 </a>
                                                             </div>
                                                             <div class="col-4">
                                                                 <a href="#">
                                                                     <img class="img-fluid rounded w-100"
-                                                                        src="img/team-3.jpeg" alt="Product Image 2">
+                                                                        src="img/Fotos store/maleta-2.jpeg" alt="Product Image 2">
                                                                 </a>
                                                             </div>
                                                             <div class="col-4">
                                                                 <a href="#">
                                                                     <img class="img-fluid rounded w-100"
-                                                                        src="img/team-1.jpeg" alt="Product Image 3">
+                                                                        src="img/Fotos store/maleta-3.jpeg" alt="Product Image 3">
                                                                 </a>
                                                             </div>
                                                         </div>
@@ -386,19 +387,19 @@
                                                             <div class="col-4">
                                                                 <a href="#">
                                                                     <img class="img-fluid rounded w-100"
-                                                                        src="img/team-2.jpeg" alt="Product Image 4">
+                                                                        src="img/Fotos store/maleta-4.jpeg" alt="Product Image 4">
                                                                 </a>
                                                             </div>
                                                             <div class="col-4">
                                                                 <a href="#">
                                                                     <img class="img-fluid rounded w-100"
-                                                                        src="img/team-3.jpeg" alt="Product Image 5">
+                                                                        src="img/Fotos store/maleta-5.jpeg" alt="Product Image 5">
                                                                 </a>
                                                             </div>
                                                             <div class="col-4">
                                                                 <a href="#">
                                                                     <img class="img-fluid rounded w-100"
-                                                                        src="img/team-4.jpeg" alt="Product Image 6">
+                                                                        src="img/Fotos store/maleta-6.jpeg" alt="Product Image 6">
                                                                 </a>
                                                             </div>
                                                         </div>
@@ -411,19 +412,19 @@
                                                             <div class="col-4">
                                                                 <a href="#">
                                                                     <img class="img-fluid rounded w-100"
-                                                                        src="img/team-1.jpeg" alt="Product Image 7">
+                                                                        src="img/Fotos store/maleta-7.jpeg" alt="Product Image 7">
                                                                 </a>
                                                             </div>
                                                             <div class="col-4">
                                                                 <a href="#">
                                                                     <img class="img-fluid rounded w-100"
-                                                                        src="img/team-2.jpeg" alt="Product Image 8">
+                                                                        src="img/Fotos store/maleta-8.jpeg" alt="Product Image 8">
                                                                 </a>
                                                             </div>
                                                             <div class="col-4">
                                                                 <a href="#">
                                                                     <img class="img-fluid rounded w-100"
-                                                                        src="img/team-3.jpeg" alt="Product Image 9">
+                                                                        src="img/Fotos store/maleta.jpeg" alt="Product Image 9">
                                                                 </a>
                                                             </div>
                                                         </div>
@@ -447,16 +448,14 @@
                                     <div class="col-lg-7 mt-5">
                                         <div class="card">
                                             <div class="card-body">
-                                                <h1 class="h2">Termos</h1>
-                                                <p class="h3 py-2">$25.00</p>
+                                                <h1 class="h2">Maletas</h1>
+                                                <p class="h3 py-2">Desde $68.000</p>
                                                 <p class="py-2">
                                                     <i class="fa fa-star text-warning"></i>
                                                     <i class="fa fa-star text-warning"></i>
                                                     <i class="fa fa-star text-warning"></i>
                                                     <i class="fa fa-star text-warning"></i>
                                                     <i class="fa fa-star text-secondary"></i>
-                                                    <span class="list-inline-item text-dark">Rating 4.8 | 36
-                                                        Comments</span>
                                                 </p>
                                                 <ul class="list-inline">
                                                     <li class="list-inline-item">
